Fixed texture background to exist behind logo.

--- a/src/client/containers/home/styles.scss
+++ b/src/client/containers/home/styles.scss
@@ -10,6 +10,7 @@
 		height: 100%;
 		width: 100%;
 		background: repeating-linear-gradient(45deg, #ffffff, #c5c5c5 1px, #c85c06 1px, #8d311a 1px);
+		z-index: -1;
 	}
 }
 
